@startuml

skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

class ListFutureExamsUI <<presentation>> {
    doShow()
}
class ListFutureExamsController <<application>> {
    listStudentFutureExams()
}

class AuthorizationService <<service>> {
    ensureAuthenticatedUserHasAnyOf(Role...)
    session()
}

class UserSession {
    authenticatedUser()
}

class ExamManagementService <<service>> {
    findFutureExams()
}

class PersistenceContext <<persistence>> {
    repositories()
}

class RepositoryFactory <<factory>> {
    exams()
}

class ExamRepository <<repository>> {
    futureExams
}

ListFutureExamsUI --> ListFutureExamsController : the controller
ListFutureExamsController --> AuthorizationService : autzh
ListFutureExamsController --> ExamManagementService : service
ListFutureExamsController --> PersistenceContext : persistence
AuthorizationService --> UserSession : session
ExamManagementService --> PersistenceContext : persistence
ExamManagementService --> ExamRepository : repo
PersistenceContext --> RepositoryFactory : factory
RepositoryFactory --> ExamRepository : repo


@enduml